--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .c-header{
-    background-color: #25232D;
+    background: radial-gradient(farthest-corner at right top,#06182D, #3a3a41);
     width: 100vw;
     height: 50px;
-    color: #fff;
+    color: #f5f5f5; 
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,7 +11,7 @@
 .c-header__button{
     border: none;
     background: none;
-    color: #fff;
+    color: #f5f5f5;
     box: 4;
     cursor: pointer;
 
