--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -9,7 +9,8 @@
 }
 .c-card__image{
     max-height: 100px;
-    padding-right: 10px
+    padding-right: 10px;
+    cursor: pointer;
 }
 .c-card__text{
     margin-top: 0;
@@ -30,4 +31,7 @@
     width: 45px;
     text-align: center;
     font-size: 14px;
+}
+.c-card_load{
+    position: absolute;
 }
