--- a/src/components/Cadastro/Cadastro.css
+++ b/src/components/Cadastro/Cadastro.css
@@ -4,3 +4,71 @@ html {
     font-family: 'Roboto', cursive;
 }
 
+.principal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 45px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.principal h2 {
+    color: #f5f5f5;
+    font-size: 2.5rem;
+    margin: 2rem;
+}
+
+.principal h5 {
+    color: #f5f5f5;
+    margin: 2rem;
+}
+
+.principal h5 span {
+    color: #104574;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.principal form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.principal label {
+    color: #f5f5f5;
+    font-size: 17px;
+    margin-bottom: 4px;
+}
+
+.principal input {
+    padding: 15px;
+    outline: none;
+    border: 0;
+    margin-bottom: 20px;
+    font-size: 15px;
+    width: 200px;
+    transition: all 0.5s;
+}
+
+.principal input:focus {
+    border-radius: 16px;
+}
+
+.btn  {
+    padding: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    background: transparent;
+    border: 2px solid #f5f5f5;
+    color: #f5f5f5;
+    transition: all 1s;
+    margin-bottom: 20px;
+}
+
+.btn:hover {
+    background: #f5f5f5;
+    color: #101026;
+    border-radius: 16px;
+}
