--- a/src/pages/painel/Painel.css
+++ b/src/pages/painel/Painel.css
@@ -9,3 +9,10 @@
     justify-content: center;
     padding: 10px;
 }
+
+.c-home__button{
+    padding-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
