--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .c-header{
     background: radial-gradient(farthest-corner at right top,#06182D, #3a3a41);
-    width: 100vw;
+    width: 100%;
     height: 50px;
     color: #f5f5f5; 
     display: flex;
@@ -15,9 +15,4 @@
     box: 4;
     cursor: pointer;
 
-}
-@media (min-width:670px){
-    .c-header__items{    
-        margin-right: 50px;
-    }
 }
