--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -13,13 +13,13 @@
     cursor: pointer;
 }
 .c-card__text{
-    margin-top: 0;
+    margin: 0;
     width: 150px;
-    white-space: pre-wrap;
+    height: 55px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical; 
     font-size: 10px;
     
@@ -43,5 +43,9 @@
 }
 
 .c-card__author{
-    text-decoration: underline;
+    
+    font-size: 10px;
+    padding: 0;
+    margin: 0 0 5px 0;
+    /* text-decoration: underline; */
 }
